https://project.gfbio.org/issues/1288 GFBio logo overflow --> Scrollbar at the bottom https://project.gfbio.org/issues/1294 Back to the homepage

--- a/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/dockbar_vertical.css
+++ b/liferay-plugins-sdk-6.2GA4/themes/GFBio-2.0-bootstrap3-theme/docroot/_diffs/css/dockbar_vertical.css
@@ -583,7 +583,9 @@ $dockbarVerticalWidth: 240px;
 		  #nav{
 		  	margin: 0px;
 		  }
-/* 			display: none; */
+		  .homeMenu{
+ 			display: block; 
+ 		  }
 
 /* 			&.open { */
 /* 				display: block; */
